feat: add headless performance master worker flow